# GW2-SquadAttendanceTaker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build-release.yml
src/: AttendanceWatcher.cpp  AttendanceWatcher.hpp  Entry.cpp  Exceptions.hpp  Globals.cpp  Globals.hpp  Options.cpp  Options.hpp  Resources.h  SquadMember.hpp  imgui_extensions.h
